Remove automatic translate and correction legibility less

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -116,7 +116,7 @@
 				border-bottom-width: 2px;
 				border-bottom-style: solid;
 				border-color: transparent;
-				font-weight: lighter;
+				font-weight: 200;
 				text-transform: lowercase;
 				font-size: 1.2em;
 			}
