--- a/less/type.less
+++ b/less/type.less
@@ -66,7 +66,7 @@ h2 {
 	text-transform: uppercase;
 }
 h3 { 
-	font-size: @baseFontSize * 1.5; // 1.75 // ~24px
+	font-size: @baseFontSize * 1.6; // 1.75 // ~24px
 	font-weight: 100;
 	letter-spacing: 1px;
 	line-height: @baseLineHeight + 10;
